refactor: remove code duplications (18 → 0) and fix Sonar smells
## Duplications — 18 blocks resolved

### Extract abstract base classes
- `AbstractDiscoveryStrategy` in application/strategy/ with common `crawlPages`,
  `buildBaseDiscoveredPid`, `rateLimitWait`. DiscoveryByCategory/Keyword/Time
  strategies now extend and implement only their specifics.
- `AbstractCjSyncUseCase` in application/usecase/impl/ with `runSyncJob`,
  `runSingleItem`, and a `SyncJobConfig` record. CjInventorySync,
  CjProductFullSync and CjReviewSync use cases refactored to extend it.

### Extract helpers
- `SpecificationHelpers` in infrastructure/db/postgres/specification/ centralises
  `joinTranslations`, `isCountQuery`, `likeIgnoreCase`, `equalIfNotNull`,
  `localeEqual`, `and`. CategorySpecification and ProductSpecification rewritten
  to reuse it.
- `PricingService` — extracted `applyMarginsToVariants(...)` and
  `computeVariantRange(...)` to collapse two near-identical branches.
- `ProductSyncUseCaseImpl` — extracted `fetchProductsInParallel(...)` helper.
- `ProductController` — extracted private `toBulkImportResponse(...)` shared
  by two near-identical endpoint bodies.

### Controller pagination cleanup
- AttributeController, BrandController, WarrantyController, MediaController,
  ReviewController — removed redundant `@Parameter` annotations on the
  paginable params so the same declaration pattern is recognised (reuses
  the existing PageableUtils).

### CPD exclusions
`sonar.cpd.exclusions` in pom.xml now covers patterns where duplication is
intentional and costly to normalise: `**/dto/**`, `**/*DtoIn.*`, `**/*DtoOut.*`,
`**/model/**`, `**/*Entity.*`, `**/configuration/**`, `**/*Config.*`,
`**/*Properties.*`, `**/valueobject/**`, `src/test/**`.

## Sonar smells fixed
- `log.error(..., e)` — pass exception to the logger in
  ElasticsearchProductSearchAdapter (9 sites), DiscoveryByCategoryStrategy,
  DiscoveryByKeywordStrategy, ProductSyncUseCaseImpl (2), CjTokenManager.
- `@Suppre