@@ -25,6 +25,8 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class CategoryUseCaseImpl implements CategoryUseCase {
 
+    private static final String ENTITY_NAME = "Category";
+
     private final CategoryRepository categoryRepository;
 
     @Override
@@ -47,7 +49,7 @@ public class CategoryUseCaseImpl implements CategoryUseCase {
     @Transactional(readOnly = true)
     public Category findById(String categoryId, String locale) {
         return categoryRepository.findById(categoryId, locale)
-                .orElseThrow(() -> Message.ENTITY_NOT_FOUND.toEntityNotFound("Category", categoryId));
+                .orElseThrow(() -> Message.ENTITY_NOT_FOUND.toEntityNotFound(ENTITY_NAME, categoryId));
     }
 
     @Override
@@ -72,7 +74,7 @@ public class CategoryUseCaseImpl implements CategoryUseCase {
     @Transactional
     public void publishCategory(String categoryId) {
         Category category = categoryRepository.findById(categoryId, null)
-                .orElseThrow(() -> Message.ENTITY_NOT_FOUND.toEntityNotFound("Category", categoryId));
+                .orElseThrow(() -> Message.ENTITY_NOT_FOUND.toEntityNotFound(ENTITY_NAME, categoryId));
         CategoryStatus newStatus = category.getStatus() == CategoryStatus.PUBLISHED
                 ? CategoryStatus.DRAFT
                 : CategoryStatus.PUBLISHED;
@@ -119,76 +121,51 @@ public class CategoryUseCaseImpl implements CategoryUseCase {
     @Override
     @Transactional
     public BulkCategoryResult bulkCreate(List<BulkCategoryRow> rows) {
-        int created = 0;
-        int skipped = 0;
+        BulkCreateCounters counters = new BulkCreateCounters();
 
         for (BulkCategoryRow row : rows) {
-            // ── Level 1 ──────────────────────────────────
-            List<CategoryTranslation> l1Translations = row.level1Translations();
-            if (l1Translations == null || l1Translations.isEmpty()) {
-                continue;
-            }
-
-            String l1Key = l1Translations.get(0).getName();
-            String l1Locale = l1Translations.get(0).getLocale();
-            String l1Id;
-
-            Optional<String> existingL1 = categoryRepository.findCategoryIdByNameAndLocaleAndLevelAndParent(l1Key,
-                    l1Locale, 1, null);
-
-            if (existingL1.isPresent()) {
-                l1Id = existingL1.get();
-                skipped++;
-            } else {
-                Category l1 = Category.builder().level(1).parentId(null).translations(l1Translations).build();
-                l1Id = categoryRepository.saveAndReturnId(l1);
-                created++;
-            }
-
-            // ── Level 2 ──────────────────────────────────
-            List<CategoryTranslation> l2Translations = row.level2Translations();
-            if (l2Translations == null || l2Translations.isEmpty()) {
-                continue;
-            }
-
-            String l2Key = l2Translations.get(0).getName();
-            String l2Locale = l2Translations.get(0).getLocale();
-            String l2Id;
-
-            Optional<String> existingL2 = categoryRepository.findCategoryIdByNameAndLocaleAndLevelAndParent(l2Key,
-                    l2Locale, 2, l1Id);
-
-            if (existingL2.isPresent()) {
-                l2Id = existingL2.get();
-                skipped++;
-            } else {
-                Category l2 = Category.builder().level(2).parentId(l1Id).translations(l2Translations).build();
-                l2Id = categoryRepository.saveAndReturnId(l2);
-                created++;
-            }
-
-            // ── Level 3 ──────────────────────────────────
-            List<CategoryTranslation> l3Translations = row.level3Translations();
-            if (l3Translations == null || l3Translations.isEmpty()) {
-                continue;
-            }
-
-            String l3Key = l3Translations.get(0).getName();
-            String l3Locale = l3Translations.get(0).getLocale();
-
-            Optional<String> existingL3 = categoryRepository.findCategoryIdByNameAndLocaleAndLevelAndParent(l3Key,
-                    l3Locale, 3, l2Id);
-
-            if (existingL3.isPresent()) {
-                skipped++;
-            } else {
-                Category l3 = Category.builder().level(3).parentId(l2Id).translations(l3Translations).build();
-                categoryRepository.saveAndReturnId(l3);
-                created++;
-            }
+            processBulkRow(row, counters);
         }
 
-        return BulkCategoryResult.builder().created(created).skipped(skipped).totalRows(rows.size()).build();
+        return BulkCategoryResult.builder().created(counters.created).skipped(counters.skipped).totalRows(rows.size())
+                .build();
+    }
+
+    private void processBulkRow(BulkCategoryRow row, BulkCreateCounters counters) {
+        String l1Id = upsertLevel(row.level1Translations(), 1, null, counters);
+        if (l1Id == null) {
+            return;
+        }
+        String l2Id = upsertLevel(row.level2Translations(), 2, l1Id, counters);
+        if (l2Id == null) {
+            return;
+        }
+        upsertLevel(row.level3Translations(), 3, l2Id, counters);
+    }
+
+    /**
+     * Upserts a category at the given level and returns its id. Returns
+     * {@code null} when the translations are absent so the caller can stop
+     * processing deeper levels.
+     */
+    private String upsertLevel(List<CategoryTranslation> translations, int level, String parentId,
+            BulkCreateCounters counters) {
+        if (translations == null || translations.isEmpty()) {
+            return null;
+        }
+        String name = translations.get(0).getName();
+        String locale = translations.get(0).getLocale();
+
+        Optional<String> existing = categoryRepository.findCategoryIdByNameAndLocaleAndLevelAndParent(name, locale,
+                level, parentId);
+        if (existing.isPresent()) {
+            counters.skipped++;
+            return existing.get();
+        }
+        Category created = Category.builder().level(level).parentId(parentId).translations(translations).build();
+        String newId = categoryRepository.saveAndReturnId(created);
+        counters.created++;
+        return newId;
     }
 
     private List<Category> buildTree(List<Category> flatCategories) {
@@ -201,6 +178,11 @@ public class CategoryUseCaseImpl implements CategoryUseCase {
             }
         });
 
-        return flatCategories.stream().filter(c -> c.getParentId() == null).collect(Collectors.toList());
+        return flatCategories.stream().filter(c -> c.getParentId() == null).toList();
+    }
+
+    private static final class BulkCreateCounters {
+        int created;
+        int skipped;
     }
 }
